# HanoiSolver

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
include/: Button.hpp  Disk.hpp  DiskManager.hpp  Hanoi.hpp  MainScreen.hpp  Screen.hpp  Towers.hpp  main.hpp
src/: .clangd  Button.cpp  Disk.cpp  DiskManager.cpp  Hanoi.cpp  Screen.cpp  Towers.cpp  main.cpp
